Fix spacing around arm and hb messages

--- a/src/static/css/module/rate-checker.less
+++ b/src/static/css/module/rate-checker.less
@@ -555,8 +555,8 @@
   margin: 2.5em 0 1em 0;
 }
 
-.warning {
-  margin-top: -30px;
+.form-sub.warning {
+  margin-top: -20px;
   padding-top: 0;
   border-top: 0;
 }
